--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,35 @@ body {
     background-color: #f9f9f9;
   }
 }
+
+@media print {
+  @page {
+    size: A4;
+    margin: 0;
+  }
+
+  section:first-child {
+    display: none;
+  }
+
+  section:last-child {
+    flex: 1;
+    border: none;
+    height: 297mm;
+    width: 210mm;
+    margin: 0 auto;
+    padding: 0;
+    box-shadow: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  body {
+    background: none;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
