--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+@theme {
+  --breakpoint-tablet: 1150px;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -59,32 +63,31 @@ body {
     margin: 0;
   }
 
-  section:first-child {
+  #leftSection {
     display: none;
   }
 
-  section:last-child {
-    flex: 1;
-    border: none;
-    height: 297mm;
-    width: 210mm;
-    margin: 0 auto;
-    padding: 0;
-    box-shadow: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  #printSection {
+    flex: none; 
+    height: 297mm; 
+    width: 210mm; 
+    margin: 0 auto; 
+    padding: 0; 
+    box-shadow: none; 
+    display: block; 
   }
 
   body {
-    background: none;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    background: none; 
+    margin: 0; 
+    display: block; 
   }
 
   button {
     display: none;
+  }
+
+  .print-text-11pt {
+    font-size: 11pt !important;
   }
 }
